# VisuProject

./: CMakeLists.txt  DataLoader.h~  Lien vers Nouveau document  Sheppard.h~  SphericalToCartesian.cpp~  SphericalToCartesian.h~  Stations.cpp~  Stations.h~  cmdDatas.txt~  cmdStation.txt~  commandes.txt~  main.cpp~
datas/: datas.csv  postesSynop.csv
eigen/: .hg_archival.txt
include/: DataLoader.h  Sheppard.h  SphericalToCartesian.h  Stations.h
sedcmd/: cmdDatas.txt  cmdStation.txt
src/: CMakeLists.txt  CMakeLists.txt~  DataLoader.cpp  DataLoader.cpp~  InterpolatedGrid.cpp  InterpolatedGrid.h  Measure.cpp  Measure.h  SphericalToCartesian.cpp  SphericalToCartesian.cpp~  Stations.cpp  Stations.cpp~  main.cpp  main.cpp~  testShepardInterpolation.cpp
